# pnct-container-agent

./: .env  .env.prod  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: .env
app/layers/ai_agent/agent/: .env  agent_orchestrator.py  base_agent.py  gemini_agent.py
app/layers/ai_agent/parsers/: entity_extractor.py  intent_parser.py  query_parser.py
app/layers/ai_agent/prompts/: system_prompts.py
app/layers/ai_agent/schemas/: output_schema.py
app/layers/api/: dependencies.py  main.py
app/layers/api/middleware/: auth.py  error_handler.py  logging.py  rate_limit.py
app/layers/api/schemas/: request.py  response.py
app/layers/api/services/: query_service.py
app/layers/api/validators/: container_validator.py  query_validator.py
app/layers/mcp/clients/: temporal_client.py  workflow_client.py
app/layers/mcp/handlers/: tool_executor.py
app/layers/mcp/registry/: tool_factory.py  tool_registry.py
app/layers/mcp/tools/: base_tool.py  container_tools.py
app/layers/scraper/parsers/: container_parser.py
app/layers/scraper/temporal/: config.py  worker.py
app/shared/config/constants/: app_constants.py  scraper_constants.py
app/shared/database/: base.py  session.py
app/shared/exceptions/: api_exceptions.py  base_exceptions.py  scraper_exceptions.py
app/shared/schemas/: common_response.py  container_schema.py  container_scrape_schema.py  query_schema.py  response_metadata.py  response_schema.py  sse_schema.py  workflow_schema.py
app/shared/utils/: cache.py  date_utils.py  helpers.py  logger.py  retry.py
(+20 files in other folders)
