[project]
name = "portpro-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.121.2",
    "google-adk>=1.18.0",
    "google-genai>=1.50.1",
    "mcp[cli]>=1.21.1",
    "playwright>=1.56.0",
    "temporalio>=1.19.0",
]
